emacs key-binding for focus
As a consequence full screen is mapped to +m.

--- a/config
+++ b/config
@@ -32,6 +32,12 @@ bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
+# alternatively, you can use emacs key bindings:
+bindsym $mod+b focus left
+bindsym $mod+n focus down
+bindsym $mod+p focus up
+bindsym $mod+f focus right
+
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
@@ -57,7 +63,7 @@ bindsym $mod+h split h
 bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen
+bindsym $mod+m fullscreen
 
 # change container layout (stacked, tabbed, default)
 bindsym $mod+s layout stacking
