--- a/config
+++ b/config
@@ -50,6 +50,12 @@ bindsym $mod+Shift+K move down
 bindsym $mod+Shift+L move up
 bindsym $mod+Shift+colon move right
 
+# alternatively, you can use emacs key-binding:
+bindsym $mod+Shift+B move left
+bindsym $mod+Shift+N move down
+bindsym $mod+Shift+P move up
+bindsym $mod+Shift+F move right
+
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
@@ -153,7 +159,7 @@ bindsym Escape mode "default"
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
+#p Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
