--- a/config
+++ b/config
@@ -147,8 +147,8 @@ bindsym Escape mode "default"
 
 bindsym $mod+r mode "resize"
 
-#p Start i3bar to display a workspace bar (plus the system information i3status
+# Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status -c ~/.i3/i3status.conf
 }
