include cpu usage in status

--- a/i3status.conf
+++ b/i3status.conf
@@ -14,6 +14,7 @@ order += "ethernet eth0"
 order += "battery 0"
 order += "cpu_temperature 0"
 order += "load"
+order += "cpu_usage"
 order += "time"
 
 wireless wlan0 {
@@ -37,6 +38,10 @@ run_watch DHCP {
 
 run_watch VPN {
         pidfile = "/var/run/vpnc/pid"
+}
+
+cpu_usage {
+        format = "%usage"
 }
 
 time {
